// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Tabs Tabs 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="TabScrollIndicators__TabScrollIndicatorContainer-sc-1cljxwo-0 gsIAKI"
      width="0"
    />
    <div
      class="Tabs__TabContainer-o5d5cd-0 giufLG"
      role="tablist"
    >
      <div />
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-69abpu-0 gcfVpD Tab1"
        role="tab"
        tabindex="0"
      >
        Tab 1
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-69abpu-0 gcfVpD Tab2"
        role="tab"
        tabindex="-1"
      >
        Tab 2
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-69abpu-0 gcfVpD Tab3"
        role="tab"
        tabindex="-1"
      >
        Tab 3
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-69abpu-0 gcfVpD Tab4"
        role="tab"
        tabindex="-1"
      >
        Tab 4
      </button>
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 1 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 2 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 3 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 4 Content
    </div>
  </div>
</div>
`;

exports[`Storyshots Tabs controlled 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="TabScrollIndicators__TabScrollIndicatorContainer-sc-1cljxwo-0 gsIAKI"
      width="0"
    />
    <div
      class="Tabs__TabContainer-o5d5cd-0 giufLG"
      role="tablist"
    >
      <div />
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-69abpu-0 gcfVpD Tab1"
        role="tab"
        tabindex="0"
      >
        Tab 1
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-69abpu-0 gcfVpD Tab2"
        role="tab"
        tabindex="-1"
      >
        Tab 2
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-69abpu-0 gcfVpD Tab3"
        role="tab"
        tabindex="-1"
      >
        Tab 3
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-69abpu-0 gcfVpD Tab4"
        role="tab"
        tabindex="-1"
      >
        Tab 4
      </button>
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Uncontrolled Content: Tab 1
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Uncontrolled Content: Tab 2
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Uncontrolled Content: Tab 3
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Uncontrolled Content: Tab 4
    </div>
    <div
      class="ControlledTabContent"
    >
      Controlled Content: Tab 1
    </div>
  </div>
</div>
`;

exports[`Storyshots Tabs set to fitted 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="TabScrollIndicators__TabScrollIndicatorContainer-sc-1cljxwo-0 gsIAKI"
      width="0"
    />
    <div
      class="Tabs__TabContainer-o5d5cd-0 giufLG"
      role="tablist"
    >
      <div />
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-69abpu-0 bJxQOQ"
        role="tab"
        tabindex="0"
      >
        Tab 1
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-69abpu-0 bJxQOQ"
        role="tab"
        tabindex="-1"
      >
        Tab 2
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-69abpu-0 bJxQOQ"
        role="tab"
        tabindex="-1"
      >
        Tab 3
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-69abpu-0 bJxQOQ"
        role="tab"
        tabindex="-1"
      >
        Tab 4
      </button>
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 1 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 2 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 3 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 4 Content
    </div>
  </div>
</div>
`;

exports[`Storyshots Tabs with a defaultSelectedIndex 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="TabScrollIndicators__TabScrollIndicatorContainer-sc-1cljxwo-0 gsIAKI"
      width="0"
    />
    <div
      class="Tabs__TabContainer-o5d5cd-0 giufLG"
      role="tablist"
    >
      <div />
      <button
        aria-selected="true"
        class="Tab__TabButton-sc-69abpu-0 kfQsHL"
        role="tab"
        selected=""
        tabindex="0"
      >
        Tab 1
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-69abpu-0 gcfVpD"
        role="tab"
        tabindex="-1"
      >
        Tab 2
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-69abpu-0 gcfVpD"
        role="tab"
        tabindex="-1"
      >
        Tab 3
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-69abpu-0 gcfVpD"
        role="tab"
        tabindex="-1"
      >
        Tab 4
      </button>
    </div>
    <div
      aria-hidden="false"
      selected=""
    >
      Tab 1 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 2 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 3 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 4 Content
    </div>
  </div>
</div>
`;

exports[`Storyshots Tabs with all tab states 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div>
      <button
        class="Tab__TabButton-sc-69abpu-0 gcfVpD"
        role="tab"
      >
        Tab
      </button>
      <button
        class="Tab__TabButton-sc-69abpu-0 kfQsHL"
        role="tab"
        selected=""
      >
        Tab
      </button>
      <button
        class="Tab__TabButton-sc-69abpu-0 iQOraC"
        disabled=""
        role="tab"
      >
        Tab
      </button>
      <button
        class="Tab__TabButton-sc-69abpu-0 kEPjFn"
        disabled=""
        role="tab"
        selected=""
      >
        Tab
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tabs with content loaded on selection 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="TabScrollIndicators__TabScrollIndicatorContainer-sc-1cljxwo-0 gsIAKI"
      width="0"
    />
    <div
      class="Tabs__TabContainer-o5d5cd-0 giufLG"
      role="tablist"
    >
      <div />
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-69abpu-0 gcfVpD Tab1"
        role="tab"
        tabindex="0"
      >
        Tab 1
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-69abpu-0 gcfVpD Tab2"
        role="tab"
        tabindex="-1"
      >
        Tab 2
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tabs with inputs 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="TabScrollIndicators__TabScrollIndicatorContainer-sc-1cljxwo-0 gsIAKI"
      width="0"
    />
    <div
      class="Tabs__TabContainer-o5d5cd-0 giufLG"
      role="tablist"
    >
      <div />
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-69abpu-0 gcfVpD Tab1"
        role="tab"
        tabindex="0"
      >
        Tab 1
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-69abpu-0 gcfVpD Tab2"
        role="tab"
        tabindex="-1"
      >
        Tab 2
      </button>
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      <input
        class="Input1"
      />
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      <input
        class="Input2"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Tabs with scrolling tabs 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="TabScrollIndicators__TabScrollIndicatorContainer-sc-1cljxwo-0 gsIAKI"
      width="0"
    />
    <div
      class="Tabs__TabContainer-o5d5cd-0 giufLG tab-container"
      role="tablist"
    >
      <div />
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-69abpu-0 gcfVpD"
        role="tab"
        tabindex="0"
      >
        Tab 1
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-69abpu-0 gcfVpD"
        role="tab"
        tabindex="-1"
      >
        Tab 2
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-69abpu-0 gcfVpD"
        role="tab"
        tabindex="-1"
      >
        Tab 3
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-69abpu-0 gcfVpD"
        role="tab"
        tabindex="-1"
      >
        Tab 4
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-69abpu-0 gcfVpD"
        role="tab"
        tabindex="-1"
      >
        Tab 5
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-69abpu-0 gcfVpD"
        role="tab"
        tabindex="-1"
      >
        Tab 6
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-69abpu-0 gcfVpD"
        role="tab"
        tabindex="-1"
      >
        Tab 7
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-69abpu-0 gcfVpD"
        role="tab"
        tabindex="-1"
      >
        Tab 8
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-69abpu-0 gcfVpD"
        role="tab"
        tabindex="-1"
      >
        Tab 9
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-69abpu-0 gcfVpD"
        role="tab"
        tabindex="-1"
      >
        Tab 10
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-69abpu-0 gcfVpD"
        role="tab"
        tabindex="-1"
      >
        Tab 11
      </button>
      <button
        aria-selected="false"
        class="Tab__TabButton-sc-69abpu-0 gcfVpD"
        role="tab"
        tabindex="-1"
      >
        Tab 12
      </button>
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 1 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 2 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 3 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 4 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 5 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 6 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 7 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 8 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 9 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 10 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 11 Content
    </div>
    <div
      aria-hidden="true"
      hidden=""
    >
      Tab 12 Content
    </div>
  </div>
</div>
`;
